fix bug flex on safari

--- a/wp-content/themes/noblehouse/assets/css/main.styl
+++ b/wp-content/themes/noblehouse/assets/css/main.styl
@@ -916,6 +916,7 @@ textarea
 		color $black
 		height 23%
 		padding 30px
+		flex 1
 		h5
 			font-family quickR
 			font-size 36px
@@ -930,6 +931,7 @@ textarea
 		display flex
 		height 77%
 		flex-direction row
+		flex 1
 		.wrapper-item-accordion
 			background $black
 			width 100%
